2014-12-04 Daniel Cloud <dcloud@sunlightfoundation.com>
* Fix cli parsing of arguments, use newer version of clint.
* Make EntityList and EntityDict subclass list and dict directly.
* Fix logging configuration in cache.py

2014-11-25  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* Merge pull request #20, fixing pagination for the congress API.
* Bump version to 1.2.7

2014-04-04  Daniel Cloud  <dcloud@sunlightfoundation.com>

* Fix for congress.legislator methods, including adding support for OCD id.
  Make sure to return None when there are no results.
* Add tests for congress.legislator method, including lookup by thomas and ocd
  identifiers.
* Further embrache path as list in congress, and test it.
* Fix congress _get_url to conform to new Service.get requirements
  (42782a8eed). May close #13.
* Update capitolwords endpoint with version number; Fix _get_url to conform to
  new Service.get requirements. See also #13.

2014-03-12  Thom Neale  <tneale@sunlightfoundation.com>

* sunlight/service.py
 - Added url encoding for url path segments.

2014-01-13  Eric Mill  <eric@sunlightfoundation.com>

* Change to HTTPS endpoint for congress API

2014-01-24  Daniel Cloud <dcloud@sunlightfoundation.com>

* sunlight/debugcache.py -> sunlight/cache.py
 - Renamed debugcache module to cache. Renamed cache instance variable to
   response_cache
* sunlight/__init__.py:
 - Rename cache alias to response_cache.
* Added documentation for cache and pagination

2014-01-24  Jeremy Carbaugh <jcarbaugh@sunlightfoundation.com>

* sunlight/pagination.py
- Made a PagingService that API services can opt in to.
* sunlight/services/congress.py
- Made congress support PagingService.

2013-11-22  Paul Tagliamonte  <paultag@sunlightfoundation.com>

* sunlight/services/opencivic.py
 - New service for OpenCivic endpoints. Currently hardcoded to talk with
   opencivicdata.org.

2013-11-20  Thom Neale  <tneale@sunlightfoundation.com>

* sunlight/debugcache.py: